Icons for secondary commands; search term parser
Former-commit-id: 49ae88e5d51b5e0eeac1f4d6babc40d73120f468 [formerly c707adbf55894189784a4b9c02f4a22ad9f42612]
Former-commit-id: f77d2032ae6d334566b9314c8744c8c0dc0a6cbd

--- a/ExViewer/Views/CachedPage.xaml
+++ b/ExViewer/Views/CachedPage.xaml
@@ -46,7 +46,7 @@
                 <AppBarButton x:Uid="Views/CachedPage/DeleteAllAppBarButton"
                               x:Name="abb_DeleteAll"
                               Click="abb_DeleteAll_Click"
-                              Icon="Clear"
+                              Icon="Delete"
                               Label="Delete all" />
             </CommandBar.SecondaryCommands>
         </CommandBar>
