--- a/ExViewer/Views/SavedPage.xaml
+++ b/ExViewer/Views/SavedPage.xaml
@@ -42,30 +42,6 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-        <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
-                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
-                RelativePanel.AlignLeftWithPanel="True"
-                RelativePanel.AlignRightWithPanel="True" />
-        <CommandBar x:Name="cb_top"
-                    Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
-                    RelativePanel.AlignLeftWithPanel="True"
-                    RelativePanel.AlignRightWithPanel="True"
-                    HorizontalContentAlignment="Stretch">
-            <CommandBar.PrimaryCommands>
-                <AppBarButton x:Uid="Views/SavedPage/RefreshAppBarButton"
-                              x:Name="abb_Refresh"
-                              Command="{x:Bind VM.Refresh}"
-                              Icon="Refresh"
-                              Label="Refresh" />
-            </CommandBar.PrimaryCommands>
-            <CommandBar.SecondaryCommands>
-                <AppBarButton x:Uid="Views/SavedPage/DeleteAllAppBarButton"
-                              x:Name="abb_DeleteAll"
-                              Click="abb_DeleteAll_Click"
-                              Icon="Clear"
-                              Label="Delete all" />
-            </CommandBar.SecondaryCommands>
-        </CommandBar>
         <tk:PullToRefreshListView x:Name="lv"
                                   RefreshRequested="lv_RefreshRequested"
                                   RelativePanel.AlignBottomWithPanel="True"
@@ -108,5 +84,29 @@
                            Text="No saved galleries" />
             </ListView.Header>
         </tk:PullToRefreshListView>
+        <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
+                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
+                RelativePanel.AlignLeftWithPanel="True"
+                RelativePanel.AlignRightWithPanel="True" />
+        <CommandBar x:Name="cb_top"
+                    Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignRightWithPanel="True"
+                    HorizontalContentAlignment="Stretch">
+            <CommandBar.PrimaryCommands>
+                <AppBarButton x:Uid="Views/SavedPage/RefreshAppBarButton"
+                              x:Name="abb_Refresh"
+                              Command="{x:Bind VM.Refresh}"
+                              Icon="Refresh"
+                              Label="Refresh" />
+            </CommandBar.PrimaryCommands>
+            <CommandBar.SecondaryCommands>
+                <AppBarButton x:Uid="Views/SavedPage/DeleteAllAppBarButton"
+                              x:Name="abb_DeleteAll"
+                              Click="abb_DeleteAll_Click"
+                              Icon="Delete"
+                              Label="Delete all" />
+            </CommandBar.SecondaryCommands>
+        </CommandBar>
     </RelativePanel>
 </controls:MyPage>
