--- a/ExViewer/Views/FavoritesPage.xaml
+++ b/ExViewer/Views/FavoritesPage.xaml
@@ -1,20 +1,20 @@
 ﻿<controls:MyPage x:Class="ExViewer.Views.FavoritesPage"
-      x:Name="root"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:ExViewer.Views"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
-      xmlns:vm="using:ExViewer.ViewModels"
-      xmlns:db="using:ExViewer.Database"
-      xmlns:cov="using:ExViewer.Converters"
-      Loading="root_Loading"
-      Unloaded="root_Unloaded"
-      mc:Ignorable="d"
-      xmlns:controls="using:ExViewer.Controls"
-      xmlns:client="using:ExClient"
-      NavigationCacheMode="Enabled">
+                 x:Name="root"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:local="using:ExViewer.Views"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
+                 xmlns:vm="using:ExViewer.ViewModels"
+                 xmlns:db="using:ExViewer.Database"
+                 xmlns:cov="using:Opportunity.Converters"
+                 Loading="root_Loading"
+                 Unloaded="root_Unloaded"
+                 mc:Ignorable="d"
+                 xmlns:controls="using:ExViewer.Controls"
+                 xmlns:client="using:ExClient"
+                 NavigationCacheMode="Enabled">
     <controls:MyPage.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
@@ -22,62 +22,29 @@
             </NavigationThemeTransition>
         </TransitionCollection>
     </controls:MyPage.Transitions>
-
+    <controls:MyPage.Resources>
+        <DataTemplate x:Key="FavoriteCategoryDataTemplate"
+                      x:DataType="client:FavoriteCategory">
+            <controls:FavoriteCategoryPresenter Category="{x:Bind}"
+                                                IsLabelVisible="True" />
+        </DataTemplate>
+    </controls:MyPage.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
-              Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition x:Name="cdSplitViewPlaceholder"
-                                  Width="0" />
-                <ColumnDefinition MaxWidth="200" />
-                <ColumnDefinition Width="2*" />
-            </Grid.ColumnDefinitions>
-            <ComboBox x:Name="cbCategory"
-                      Grid.Column="1"
-                      Margin="8,8,0,8"
-                      Style="{StaticResource NoDropDownGlyphComboBoxStyle}"
-                      SelectedItem="{x:Bind VM.Category, Mode=TwoWay}"
-                      RelativePanel.AlignLeftWithPanel="True"
-                      RelativePanel.AlignRightWithPanel="True"
-                      RelativePanel.AlignTopWithPanel="True"
-                      HorizontalAlignment="Stretch"
-                      VerticalAlignment="Stretch">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate x:DataType="client:FavoriteCategory">
-                        <controls:FavoriteCategoryPresenter Category="{x:Bind}" IsLabelVisible="True"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <AutoSuggestBox x:Uid="Views/FavoritesPage/AutoSuggestBox"
-                            RelativePanel.AlignLeftWithPanel="True"
-                            RelativePanel.AlignRightWithPanel="True"
-                            RelativePanel.AlignBottomWithPanel="True"
-                            x:Name="asb"
-                            QueryIcon="Find"
-                            Style="{StaticResource SearchAutoSuggestBoxStyle}"
-                            Grid.Column="2"
-                            Margin="8"
-                            Text="{x:Bind VM.Keyword, Mode=TwoWay}"
-                            PlaceholderText="Search..."
-                            QuerySubmitted="asb_QuerySubmitted"
-                            TextChanged="asb_TextChanged"
-                            LostFocus="asb_LostFocus"
-                            VerticalAlignment="Stretch" />
-        </Grid>
         <tk:PullToRefreshListView x:Name="lv"
                                   Grid.Row="1"
-                                  SelectionMode="None"
                                   RefreshRequested="lv_RefreshRequested"
                                   Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
                                   Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
                                   ItemsSource="{x:Bind VM.SearchResult, Mode=OneWay}"
                                   ContinuumNavigationTransitionInfo.ExitElementContainer="True"
                                   Style="{StaticResource GalleryListViewStyle}"
-                                  ItemClick="lv_ItemClick">
+                                  ItemClick="lv_ItemClick"
+                                  ContextRequested="lv_ContextRequested"
+                                  ContextCanceled="lv_ContextCanceled">
             <tk:PullToRefreshListView.RefreshIndicatorContent>
                 <tk:PullToRefreshIndicator />
             </tk:PullToRefreshListView.RefreshIndicatorContent>
@@ -106,5 +73,64 @@
                            Text="Loading more galleries..." />
             </ListView.Footer>
         </tk:PullToRefreshListView>
+        <Grid x:Name="gdTopRoot"
+              Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
+              Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition x:Name="cdSplitViewPlaceholder"
+                                  Width="0" />
+                <ColumnDefinition MaxWidth="200" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+            <ComboBox x:Name="cbCategory"
+                      Grid.Column="1"
+                      Margin="8,8,0,8"
+                      Style="{StaticResource NoDropDownGlyphComboBoxStyle}"
+                      SelectedItem="{x:Bind VM.Category, Mode=TwoWay}"
+                      HorizontalAlignment="Stretch"
+                      VerticalAlignment="Stretch"
+                      ItemTemplate="{StaticResource FavoriteCategoryDataTemplate}" />
+            <AutoSuggestBox x:Uid="Views/FavoritesPage/AutoSuggestBox"
+                            x:Name="asb"
+                            QueryIcon="Find"
+                            Style="{StaticResource SearchAutoSuggestBoxStyle}"
+                            Grid.Column="2"
+                            Margin="8"
+                            Text="{x:Bind VM.Keyword, Mode=TwoWay}"
+                            PlaceholderText="Search..."
+                            QuerySubmitted="asb_QuerySubmitted"
+                            TextChanged="asb_TextChanged"
+                            LostFocus="asb_LostFocus"
+                            VerticalAlignment="Stretch" />
+            <CommandBar x:Name="cbActions"
+                        x:DeferLoadStrategy="Lazy"
+                        Visibility="Collapsed"
+                        Grid.ColumnSpan="3"
+                        HorizontalContentAlignment="Stretch"
+                        IsDynamicOverflowEnabled="False"
+                        ClosedDisplayMode="Compact">
+                <CommandBar.Content>
+                    <ComboBox x:Name="cbCategory2"
+                              Margin="8"
+                              HorizontalAlignment="Stretch"
+                              VerticalAlignment="Stretch"
+                              ItemTemplate="{StaticResource FavoriteCategoryDataTemplate}" />
+                </CommandBar.Content>
+                <CommandBar.PrimaryCommands>
+                    <AppBarButton x:Name="abbApply"
+                                  Icon="Send"
+                                  Label="Apply"
+                                  Click="abbApply_Click" />
+                </CommandBar.PrimaryCommands>
+                <CommandBar.SecondaryCommands>
+                    <AppBarButton Icon="SelectAll"
+                                  Label="Select all"
+                                  Click="abbAll_Click" />
+                    <AppBarButton Icon="ClearSelection"
+                                  Label="Clear selection"
+                                  Click="abbClear_Click" />
+                </CommandBar.SecondaryCommands>
+            </CommandBar>
+        </Grid>
     </Grid>
 </controls:MyPage>
